# Gen_AI_Engineering

./: AI201_Proj1.ipynb  AI_RAG_Proj.ipynb  Class09.py  Class12_Encapsulation.py  Dockerfile  Polymorphism.py  Quart2_Proj01.ipynb  practice.py  readme.md
AI_Quart1/: Encapsulation.py  Inheritance.py  Practice.ipynb  git_steps.md  main.py
AI_Quart1/Modules/: calculator.py  math_utils.py
AI_Quart2/: Langgraph_module01_00.ipynb  Pract_Q2_Chatbot.ipynb
AI_Quart2/Crewai/: pyproject.toml
AI_Quart2/Crewai/src/crewai/: __init__.py
AI_Quart2/CursorProject/: pyproject.toml
AI_Quart2/CursorProject/src/my_project/: __init__.py  calculator.py
AI_Quart2/CursorProject2/: README.md  pyproject.toml
AI_Quart2/CursorProject2/project/: pyproject.toml
AI_Quart2/CursorProject2/src/my_project/: __init__.py  calculator.py  main.py
AI_Quart2/Flows/uv/: .env  README.md  pyproject.toml
AI_Quart2/Flows/uv/src/uv/: __init__.py  main.py  main2.py
AI_Quart2/ProjectAiAgent/: .env  README.md  pyproject.toml
AI_Quart2/ProjectAiAgent/poemflow/: pyproject.toml
AI_Quart2/ProjectAiAgent/poemflow/src/poemflow/: main.py
AI_Quart2/ProjectAiAgent/src/projectaiagent/: __init__.py  main.py  main2.py  main3.py
AI_Quart2/crewai_sec_class/: README.md  poem.txt  pyproject.toml
AI_Quart2/crewai_sec_class/src/crewai_sec_class/: main.py  main2.py
AI_Quart2/crewai_sec_class/tests/: test_flow.py
AI_Quart2/crewflows/: .env  pyproject.toml
AI_Quart2/crewflows/src/crewflows/: __init__.py
Modules/: functions.py  main.py  readme.md
