[project]
name = "crewai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ch_Dawood Ayaz", email = "dawoodayaz18@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
crewai = "crewai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
