[project]
name = "my_project"
version = "0.1.0"
description = "A simple calculator application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
calculator = "my_project.calculator:run"
main_calculator = "my_project.main:main"

[tool.hatch.build]
packages = ["src"]

[tool.uv.workspace]
members = ["my_project"]
