[project]
name = "projectaiagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ch_Dawood Ayaz", email = "dawoodayaz18@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.100.1",
    "litellm>=1.59.8",
]

[project.scripts]
projectaiagent = "projectaiagent.main:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
