[project]
name = "crewai_sec_class"
version = "0.1.0"
description = "crewai_sec_class using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
]

[project.scripts]
kickoff1 = "crewai_sec_class.main:kickoff"
kickoff2 = "crewai_sec_class.main2:kickoff"
kickoff3 = "crewai_sec_class.flows_crewai:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
