[project]
name = "uv-city-facts"
version = "0.1.0"
description = "A UV project that generates random city facts using LLMs"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai",
    "python-dotenv",
    "litellm",
]

[project.scripts]
kickoff1 = "crewai_sec_class.main:kickoff"
kickoff2 = "crewai_sec_class.main2:kickoff"
kickoff3 = "crewai_sec_class.flows_crewai:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"

[tool.pytest.ini_options]
pythonpath = ["src"]
