[project]
name = "crewflows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dawood Ayaz", email = "dawoodayaz18@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
]

[project.scripts]
crewflows = "crewflows:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
